# gh-bofh-rs

./: .gitignore  .gitleaksignore  .gitpod.yml  .markdownlintignore  .pre-commit-config.yaml  .releaserc.yml  .rustfmt.toml  .secrets.baseline  .yamlfmt  .yamllint.yml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SECURITY_ASSURANCE.md  SECURITY_REQUIREMENTS.md  about.toml  bacon.toml  deny.toml  licenses_report.json  licenses_report.md  nextest.toml  renovate.json
.github/: .codecov.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md  feature_request.yaml
.github/workflows/: audit.yaml  build_container.yaml  ci-merged.yaml  ci.yaml  code_coverage.yaml  dependency-review.yml  get_next_version.yaml  release.yaml  release_upload.yaml  scorecard.yaml
.reuse/: dep5
benches/: excuses_benchmark.rs
meta/: LICENSE-HEADER
scripts/: build.sh  generate_about_json.sh  generate_about_md.sh
src/gh_bofh/: cli.rs  main.rs
src/gh_bofh_lib/: excuses.rs  lib.rs
src/gh_bofh_rs_lib/: lib.rs
tests/: test_binary_classic.rs  test_binary_modern.rs  test_common_excuses.rs  test_modern_excuses.rs
