[package]
name = "gh-bofh-rs"
version = "1.0.0-next.1"
edition = "2021"
readme = "README.md"
description = ""
rust-version = "1.64.0"
repository = "https://github.com/AliSajid/gh-bofh-rs"
license = "MIT OR Apache-2.0"

[lib]
name = "gh_bofh_lib"
path = "src/gh_bofh_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "gh-bofh"
path = "src/gh_bofh/main.rs"

[dependencies]
clap = { version = "4.4.18", features = ["cargo", "debug", "env", "string", "unicode", "derive"] }
rand = { version = "0.8.5", features = ["log", "serde1"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"


[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
