# SPDX-FileCopyrightText: 2024 Ali Sajid Imami
#
# SPDX-License-Identifier: Apache-2.0
# SPDX-License-Identifier: MIT

[package]
name = "gh-bofh-rs"
version = "1.2.0"
edition = "2021"
readme = "README.md"
description = "A Rust implementation of the classic `bofh` command as a GitHub CLI extension."
rust-version = "1.74.1"
repository = "https://github.com/AliSajid/gh-bofh-rs"
license = "MIT OR Apache-2.0"

[lib]
name = "gh_bofh_lib"
path = "src/gh_bofh_lib/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "gh-bofh"
path = "src/gh_bofh/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["env", "derive"] }
rand = { version = "0.8.5" }

[profile.dev]
opt-level = 1
debug = true

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimisation
codegen-units = 1 # Reduced to increase optimisations.
panic = 'abort'   # Abort on panic
strip = "symbols" # Strip symbols from binary

[dev-dependencies]
rstest = "0.22.0"
sealed_test = "1.1.0"
